--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "js-cookie": "^3.0.1",
     "next": "13.2.4",
     "react": "18.2.0",
